add custom css for ui

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,31 @@ html body[data-scroll-locked] {
   font-weight: bold;
 }
 
+.custom-scroll::-webkit-scrollbar {
+  height: 6px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 3px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Chrome, Safari, Edge, Opera */
+.no-arrow-number-input::-webkit-outer-spin-button,
+.no-arrow-number-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.no-arrow-number-input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
