--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body {
   font-family: 'Roboto Mono', monospace;
 }
 
+code {
+  font-family: 'Roboto Mono', monospace;
+}
+
 html body[data-scroll-locked] {
   overflow: visible !important;
   margin-right: 0 !important;
@@ -62,6 +66,16 @@ html body[data-scroll-locked] {
   outline: none;
   border: none;
   box-shadow: none;
+}
+
+/* Shadcn dialog */
+body {
+  pointer-events: auto !important;
+}
+
+/* Admin css */
+.tiptap.ProseMirror {
+  outline: none !important;
 }
 
 /* Chrome, Safari, Edge, Opera */
