--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,7 @@ body {
 /* Firefox */
 .no-arrow-number-input[type='number'] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 @layer base {
